fixed not centered container and finished eContainer styling, now need to do JS animations

--- a/static/css/containers.less
+++ b/static/css/containers.less
@@ -91,6 +91,7 @@ body::-webkit-scrollbar-thumb:focus {
 .eContainer{
     width: 90%;
     height: 90%;
+    margin-right: 10px;
 }
 
 .ec-frame{
@@ -109,9 +110,11 @@ body::-webkit-scrollbar-thumb:focus {
     background-repeat: no-repeat;
     background-size: 20px 20px;
     padding: 10px;
+    transition: @btrans;
 }
 
 .ec-c{
     background: rgba(127,156,229,0.30);
     background: @ecblue;
+    transition: @btrans;
 }
